--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: java
 
-sudo: enabled
-
 install: ant deps
 
 jdk:
   - oraclejdk8
-
 install: true
+
+script:
+  - ./mvn clean install
+  - bash <(curl -s https://codecov.io/bash)
 
 cache:
   directories:
