--- a/build.xml
+++ b/build.xml
@@ -1,78 +1,297 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<project name="ivs-vut-bit-2018" default="all">
 
-<project name="Simple-calculatior" default="compile">
+  <path id="classpath.test">
+    <pathelement location="lib/junit-4.12.jar"/>
+    <pathelement location="lib/hamcrest-core-1.3.jar"/>
+    <pathelement location="out/artifacts/JavaFXApp/antlr-4.7.1-complete.jar"/>
+    <pathelement location="out/artifacts/JavaFXApp/Calculator.jar" />
 
-    <path id="classpath.test">
-        <pathelement location="lib/junit-4.12.jar"/>
-        <pathelement location="lib/hamcrest-core-1.3.jar"/>
-        <pathelement location="out/compile"/>
-    </path>
+  </path>
 
-    <path id="classpath.product">
-        <pathelement location="lib/antlr-4.7.1-complete.jar"/>
-        <pathelement location="out/compile"/>
-    </path>
+  
+  <property file="build.properties"/>
+  <!-- Uncomment the following property if no tests compilation is needed -->
+  <!-- 
+  <property name="skip.tests" value="true"/>
+   -->
+  
+  <!-- Compiler options -->
+  
+  <property name="compiler.debug" value="on"/>
+  <property name="compiler.generate.no.warnings" value="off"/>
+  <property name="compiler.args" value=""/>
+  <property name="compiler.max.memory" value="700m"/>
+  <patternset id="ignored.files">
+    <exclude name="**/*.hprof/**"/>
+    <exclude name="**/*.pyc/**"/>
+    <exclude name="**/*.pyo/**"/>
+    <exclude name="**/*.rbc/**"/>
+    <exclude name="**/*.yarb/**"/>
+    <exclude name="**/*~/**"/>
+    <exclude name="**/.DS_Store/**"/>
+    <exclude name="**/.git/**"/>
+    <exclude name="**/.hg/**"/>
+    <exclude name="**/.svn/**"/>
+    <exclude name="**/CVS/**"/>
+    <exclude name="**/__pycache__/**"/>
+    <exclude name="**/_svn/**"/>
+    <exclude name="**/vssver.scc/**"/>
+    <exclude name="**/vssver2.scc/**"/>
+  </patternset>
+  <patternset id="library.patterns">
+    <include name="*.egg"/>
+    <include name="*.jar"/>
+    <include name="*.ear"/>
+    <include name="*.swc"/>
+    <include name="*.war"/>
+    <include name="*.zip"/>
+    <include name="*.ane"/>
+  </patternset>
+  <patternset id="compiler.resources">
+    <exclude name="**/?*.java"/>
+    <exclude name="**/?*.form"/>
+    <exclude name="**/?*.class"/>
+    <exclude name="**/?*.groovy"/>
+    <exclude name="**/?*.scala"/>
+    <exclude name="**/?*.flex"/>
+    <exclude name="**/?*.kt"/>
+    <exclude name="**/?*.clj"/>
+  </patternset>
+  
+  <!-- JDK definitions -->
+  
+  <property name="jdk.bin.1.8" value="${jdk.home.1.8}/bin"/>
+  <path id="jdk.classpath.1.8">
+    <fileset dir="${jdk.home.1.8}">
+      <include name="jre/lib/charsets.jar"/>
+      <include name="jre/lib/deploy.jar"/>
+      <include name="jre/lib/ext/cldrdata.jar"/>
+      <include name="jre/lib/ext/dnsns.jar"/>
+      <include name="jre/lib/ext/jaccess.jar"/>
+      <include name="jre/lib/ext/jfxrt.jar"/>
+      <include name="jre/lib/ext/localedata.jar"/>
+      <include name="jre/lib/ext/nashorn.jar"/>
+      <include name="jre/lib/ext/sunec.jar"/>
+      <include name="jre/lib/ext/sunjce_provider.jar"/>
+      <include name="jre/lib/ext/sunpkcs11.jar"/>
+      <include name="jre/lib/ext/zipfs.jar"/>
+      <include name="jre/lib/javaws.jar"/>
+      <include name="jre/lib/jce.jar"/>
+      <include name="jre/lib/jfr.jar"/>
+      <include name="jre/lib/jfxswt.jar"/>
+      <include name="jre/lib/jsse.jar"/>
+      <include name="jre/lib/management-agent.jar"/>
+      <include name="jre/lib/plugin.jar"/>
+      <include name="jre/lib/resources.jar"/>
+      <include name="jre/lib/rt.jar"/>
+    </fileset>
+  </path>
+  
+  <property name="project.jdk.home" value="${jdk.home.1.8}"/>
+  <property name="project.jdk.bin" value="${jdk.bin.1.8}"/>
+  <property name="project.jdk.classpath" value="jdk.classpath.1.8"/>
+  <!-- Register Custom Compiler Taskdefs -->
+  <property name="javac2.home" value="${idea.home}/lib"/>
+  <path id="javac2.classpath">
+    <pathelement location="${javac2.home}/javac2.jar"/>
+    <pathelement location="${javac2.home}/jdom.jar"/>
+    <pathelement location="${javac2.home}/asm-all.jar"/>
+    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
+  </path>
+  <target name="register.custom.compilers">
+    <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
+    <taskdef name="instrumentIdeaExtensions" classname="com.intellij.ant.InstrumentIdeaExtensions" classpathref="javac2.classpath"/>
+  </target>
+  
+  <!-- Modules -->
+  
+  
+  <!-- Module IVS-VUT-BIT-2018 -->
+  
+  <dirname property="module.ivs-vut-bit-2018.basedir" file="${ant.file}"/>
+  
+  
+  <property name="module.jdk.home.ivs-vut-bit-2018" value="${project.jdk.home}"/>
+  <property name="module.jdk.bin.ivs-vut-bit-2018" value="${project.jdk.bin}"/>
+  <property name="module.jdk.classpath.ivs-vut-bit-2018" value="${project.jdk.classpath}"/>
+  
+  <property name="compiler.args.ivs-vut-bit-2018" value="-encoding UTF-8 -source 1.8 -target 1.8 ${compiler.args}"/>
+  
+  <property name="ivs-vut-bit-2018.output.dir" value="${module.ivs-vut-bit-2018.basedir}/out/production/IVS-VUT-BIT-2018"/>
+  <property name="ivs-vut-bit-2018.testoutput.dir" value="${module.ivs-vut-bit-2018.basedir}/out/test/IVS-VUT-BIT-2018"/>
+  
+  <path id="ivs-vut-bit-2018.module.bootclasspath">
+    <!-- Paths to be included in compilation bootclasspath -->
+  </path>
+  
+  <path id="ivs-vut-bit-2018.module.production.classpath">
+    <path refid="${module.jdk.classpath.ivs-vut-bit-2018}"/>
+    <pathelement location="${idea.home}/lib/hamcrest-core-1.3.jar"/>
+    <pathelement location="${idea.home}/lib/junit-4.12.jar"/>
+    <pathelement location="${basedir}/lib/antlr-4.7.1-complete.jar"/>
+  </path>
+  
+  <path id="ivs-vut-bit-2018.runtime.production.module.classpath">
+    <pathelement location="${ivs-vut-bit-2018.output.dir}"/>
+    <pathelement location="${idea.home}/lib/hamcrest-core-1.3.jar"/>
+    <pathelement location="${idea.home}/lib/junit-4.12.jar"/>
+    <pathelement location="${basedir}/lib/antlr-4.7.1-complete.jar"/>
+  </path>
+  
+  <path id="ivs-vut-bit-2018.module.classpath">
+    <path refid="${module.jdk.classpath.ivs-vut-bit-2018}"/>
+    <pathelement location="${ivs-vut-bit-2018.output.dir}"/>
+    <pathelement location="${idea.home}/lib/hamcrest-core-1.3.jar"/>
+    <pathelement location="${idea.home}/lib/junit-4.12.jar"/>
+    <pathelement location="${basedir}/lib/antlr-4.7.1-complete.jar"/>
+  </path>
+  
+  <path id="ivs-vut-bit-2018.runtime.module.classpath">
+    <pathelement location="${ivs-vut-bit-2018.testoutput.dir}"/>
+    <pathelement location="${ivs-vut-bit-2018.output.dir}"/>
+    <pathelement location="${idea.home}/lib/hamcrest-core-1.3.jar"/>
+    <pathelement location="${idea.home}/lib/junit-4.12.jar"/>
+    <pathelement location="${basedir}/lib/antlr-4.7.1-complete.jar"/>
+  </path>
+  
+  
+  <patternset id="excluded.from.module.ivs-vut-bit-2018">
+    <patternset refid="ignored.files"/>
+  </patternset>
+  
+  <patternset id="excluded.from.compilation.ivs-vut-bit-2018">
+    <patternset refid="excluded.from.module.ivs-vut-bit-2018"/>
+  </patternset>
+  
+  <path id="ivs-vut-bit-2018.module.sourcepath">
+    <dirset dir="${module.ivs-vut-bit-2018.basedir}">
+      <include name="src"/>
+    </dirset>
+  </path>
+  
+  
+  <target name="compile.module.ivs-vut-bit-2018" depends="compile.module.ivs-vut-bit-2018.production,compile.module.ivs-vut-bit-2018.tests" description="Compile module IVS-VUT-BIT-2018"/>
+  
+  <target name="compile.module.ivs-vut-bit-2018.production" depends="register.custom.compilers" description="Compile module IVS-VUT-BIT-2018; production classes">
+    <mkdir dir="${ivs-vut-bit-2018.output.dir}"/>
+    <javac2 destdir="${ivs-vut-bit-2018.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.ivs-vut-bit-2018}/javac">
+      <compilerarg line="${compiler.args.ivs-vut-bit-2018}"/>
+      <bootclasspath refid="ivs-vut-bit-2018.module.bootclasspath"/>
+      <classpath refid="ivs-vut-bit-2018.module.production.classpath"/>
+      <src refid="ivs-vut-bit-2018.module.sourcepath"/>
+      <patternset refid="excluded.from.compilation.ivs-vut-bit-2018"/>
+    </javac2>
+    
+    <copy todir="${ivs-vut-bit-2018.output.dir}">
+      <fileset dir="${module.ivs-vut-bit-2018.basedir}/src">
+        <patternset refid="compiler.resources"/>
+        <type type="file"/>
+      </fileset>
+    </copy>
+  </target>
+  
+  <target name="compile.module.ivs-vut-bit-2018.tests" depends="register.custom.compilers,compile.module.ivs-vut-bit-2018.production" description="compile module IVS-VUT-BIT-2018; test classes" unless="skip.tests"/>
+  
+  <target name="clean.module.ivs-vut-bit-2018" description="cleanup module">
+    <delete dir="${ivs-vut-bit-2018.output.dir}"/>
+    <delete dir="${ivs-vut-bit-2018.testoutput.dir}"/>
+  </target>
+  
+  <target name="init" description="Build initialization">
+    <!-- Perform any build initialization in this target -->
+  </target>
+  
+  <target name="clean" depends="clean.module.ivs-vut-bit-2018, clean.artifact.javafxapp" description="cleanup all"/>
+  
+  <target name="build.modules" depends="init, clean, compile.module.ivs-vut-bit-2018" description="build all modules"/>
+  
+  <target name="init.artifacts">
+    <property name="artifacts.temp.dir" value="${basedir}/__artifacts_temp"/>
+    <property name="artifact.output.ivs-vut-bit-2018:jar" value="${basedir}/out/artifacts/IVS_VUT_BIT_2018_jar"/>
+    <property name="artifact.output.javafxapp" value="${basedir}/out/artifacts/JavaFXApp"/>
+    <mkdir dir="${artifacts.temp.dir}"/>
+    <property name="temp.jar.path.IVS-VUT-BIT-2018.jar" value="${artifacts.temp.dir}/IVS-VUT-BIT-2018.jar"/>
+    <property name="artifact.temp.output.JavaFXApp" value="${artifacts.temp.dir}/Calculator.jar"/>
+    <taskdef resource="com/sun/javafx/tools/ant/antlib.xml" uri="javafx:com.sun.javafx.tools.ant" classpath="${jdk.home.1.8}/lib/ant-javafx.jar"/>
+  </target>
+  
+  <target name="clean.artifact.javafxapp" description="clean JavaFXApp artifact output">
+    <delete dir="${artifact.output.javafxapp}"/>
+  </target>
+  
+  <target name="artifact.javafxapp" depends="init.artifacts" description="Build &#39;JavaFXApp&#39; artifact" xmlns:fx="javafx:com.sun.javafx.tools.ant">
 
+    <property name="ivs-vut-bit-2018.output.dir" value="${module.ivs-vut-bit-2018.basedir}/out/production/IVS-VUT-BIT-2018"/>
 
-    <target name="clean">
-        <delete dir="out" />
-    </target>
+    <property name="ivs-vut-bit-2018.output.dir" value="${module.ivs-vut-bit-2018.basedir}/out/production/IVS-VUT-BIT-2018"/>
 
-    <target depends="clean" name="compile">
-        <mkdir dir="out" />
-        <mkdir dir="out/compile" />
-        <javac srcdir="src/module_example" destdir="out/compile" includeantruntime="false" />
-        <javac srcdir="src/my_math" destdir="out/compile" includeantruntime="false" />
-        <javac srcdir="src/translator" destdir="out/translator" includeantruntime="false" />
+    <property name="languages.dir.source" value="${module.ivs-vut-bit-2018.basedir}/languages"/>
 
-        <javac
-                srcdir="src/parser"
-                destdir="out/compile"
-                includeantruntime="false">
+    <property name="languages.dir.desc" value="${module.ivs-vut-bit-2018.basedir}/out/artifacts/JavaFXApp"/>
 
-            <classpath refid="classpath.product"/>
-        </javac>
+    <copy file="${module.ivs-vut-bit-2018.basedir}/lib/antlr-4.7.1-complete.jar" tofile="${module.ivs-vut-bit-2018.basedir}/out/artifacts/JavaFXApp/antlr-4.7.1-complete.jar"/>
 
-        <javac srcdir="src/app" destdir="out/compile" includeantruntime="false" />
+    <mkdir dir="${artifact.output.javafxapp}"/>
+    <copy todir="${artifact.temp.output.JavaFXApp}">
+      <fileset dir="${ivs-vut-bit-2018.output.dir}"/>
+    </copy>
 
-        <javac srcdir="src/tests" destdir="out/compile" includeantruntime="false">
-            <classpath refid="classpath.test"/>
-        </javac>
+    <mkdir dir="${languages.dir.desc}/languages" />
 
-        <copy file="src/app/fxml_templates/app.fxml" tofile="out/compile/app/app.fxml" />
-        <copy file="src/app/fxml_templates/style.css" tofile="out/compile/app/style.css" />
-        <copy file="src/app/html_templates/eqRender.html" tofile="out/compile/app/eqRender.html" />
-        <copydir src="src/app/fonts" dest="out/compile/app/fonts" />
+    <copy todir="${languages.dir.desc}/languages" >
+      <fileset dir="${languages.dir.source}" includes="**"/>
+    </copy>
 
-    </target>
+    <fx:fileset id="all_but_JavaFXApp" dir="${artifact.temp.output.JavaFXApp}" includes="**/*.jar">
+      <exclude name="Calculator.jar"/>
+    </fx:fileset>
+    <fx:fileset id="all_JavaFXApp" dir="${artifact.temp.output.JavaFXApp}" includes="**/*.jar"/>
+    <fx:application id="JavaFXApp_id" name="JavaFXApp" mainClass="app.Main"/>
+    <fx:jar destfile="${artifact.temp.output.JavaFXApp}/Calculator.jar">
+      <fx:application refid="JavaFXApp_id"/>
+      <fileset dir="${artifact.temp.output.JavaFXApp}" excludes="**/*.jar"/>
+      <fx:resources>
+        <fx:fileset refid="all_but_JavaFXApp"/>
+      </fx:resources>
+    </fx:jar>
+    <fx:deploy width="600" height="400" updatemode="background" outdir="${artifact.temp.output.JavaFXApp}/deploy" outfile="JavaFXApp">
+      <fx:application refid="JavaFXApp_id"/>
+      <fx:resources>
+        <fx:fileset refid="all_JavaFXApp"/>
+      </fx:resources>
+    </fx:deploy>
+    <copy todir="${artifact.output.javafxapp}">
+      <fileset dir="${artifact.temp.output.JavaFXApp}/deploy"/>
+    </copy>
+    <delete includeemptydirs="true">
+      <fileset dir="${artifact.temp.output.JavaFXApp}"/>
+    </delete>
+  </target>
+  
+  <target name="build.all.artifacts" depends="artifact.javafxapp" description="Build all artifacts">
+    
+    <!-- Delete temporary files -->
+    <delete dir="${artifacts.temp.dir}"/>
+  </target>
 
-    <target depends="compile" name="pack">
-        <mkdir dir="out/pack" />
-        <mkdir dir="out/pack/lib" />
-        <copy file="lib/antlr-4.7.1-complete.jar" tofile="out/pack/lib/antlr-4.7.1-complete.jar" />
-        <jar destfile="out/pack/IVS-VUT-BIT-2018.jar" basedir="out/compile">
-            <manifest>
-                <attribute name="Main-Class" value="app.Main"/>
-            </manifest>
-        </jar>
-    </target>
+  <target name="doc">
+    <property name="source.doc.dir" value="${basedir}/src" />
+    <property name="desc.doc.dir" value="${basedir}/doc" />
+    <javadoc sourcepath="${source.doc.dir}" destdir="${desc.doc.dir}"/>
+  </target>
 
-    <target name="unit-tests">
-        <junit haltonfailure="true" printsummary="true">
-            <classpath>
-                <path refid="classpath.test" />
-                <pathelement location="out" />
-            </classpath>
+  <target name="test" depends="all">
+    <junit haltonfailure="true" printsummary="true">
+      <classpath>
+        <path refid="classpath.test" />
+      </classpath>
 
-            <formatter type="brief" usefile="false" />
+      <formatter type="brief" usefile="false" />
 
-            <test name="tests.My_math_interfaceTest"/>
-        </junit>
-    </target>
+      <test name="tests.My_math_interfaceTest"/>
+    </junit>
+  </target>
 
-    <target name="all" depends="compile, unit-tests, pack" />
-
-
-
-
+  <target name="all" depends="build.modules, build.all.artifacts" description="build all"/>
 </project>
