--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,58 @@
-.PHONY: install-ant-junit install-ant all pack run clean test doc
-install-ant:
-	@if ! yum -q list intalled ant > /dev/null ; then\
-		sudo yum install ant;\
-	fi
-install-ant-junit:
-	@if ! yum -q list intalled ant > /dev/null ; then\
-		sudo yum install ant-junit;\
-	fi
+PACK_NAME=xkolar71_xnguye16_xomach00_xnavra61
+PACK=pack
+TMP_DIR := $(shell mktemp -d)
 
-all: install-ant
-	ant all
+.PHONY: install-all
 
-pack:
-	ant pack
-run:
-	ant compile
-	ant run
+install-all:
+	sudo apt-get install ant
+	sudo apt-get install default-jre
+	sudo apt-get install default-jdk
+	sudo apt-get install
+	cd /usr/local/lib && wget https://www.antlr.org/download/antlr-4.7.1-complete.jar
+	cd /usr/local/lib && export CLASSPATH=".:/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH"
+	cd /usr/local/lib && alias antlr4='java -jar /usr/local/lib/antlr-4.7.1-complete.jar'
+	cd /usr/local/lib && alias grun='java org.antlr.v4.gui.TestRig'
+	sudo apt-get install junit
+
+clean:
+	cd ../doc && rm -rf *
+	cd ../out && rm -rf *
+
+compile:
+	cd .. && ant all
+
+doc: doxygen
+
+doxygen:
+	cd ../doc && rm -rf *
+	cd ../ && ant doc
+
+# Go to top && run ant
+all: install-ant clean compile
+
+
+# Pack project
+pack: clean doxygen
+	rm -rf ../$(PACK)
+	rm -rf ../$(TMP_DIR)/my_pack
+	cd ../ && mkdir -p $(PACK)
+	mkdir -p $(TMP_DIR)/my_pack
+	cd $(TMP_DIR)/my_pack && mkdir -p doc install repo
+	cd ../ && cp -R * $(TMP_DIR)/my_pack/repo
+	mv $(TMP_DIR)/my_pack/repo/doc/* $(TMP_DIR)/my_pack/doc
+	cp $(TMP_DIR)/my_pack/repo/install/* $(TMP_DIR)/my_pack/install
+	cd $(TMP_DIR)/my_pack && zip -r $(PACK_NAME).zip .
+	cp $(TMP_DIR)/my_pack/$(PACK_NAME).zip ../pack/$(PACK_NAME).zip
+	rm -rf $(TMP_DIR)/my_pack
+
+run: all
+	cd ../out/artifacts/JavaFXApp && java -classpath antlr-4.7.1-complete.jar:Calculator.jar app.Main
 test: install-ant-junit
 	ant unit-tests
 doc:
 	doxygen Doxyfile
-clean:
-	ant clean
+
+help:
+	echo "Před spuštěním programu je třeba nainstalovat javu a aplikaci přeložit. To bude provedeno automaticky díky závislostem"
+
